--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
 Flask==3.1.0
+flask-cors==5.0.1
+Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
@@ -13,4 +15,7 @@ pillow==11.1.0
 pycparser==2.22
 PyMuPDF==1.25.5
 pypdfium2==4.30.1
+SQLAlchemy==2.0.40
+typing_extensions==4.13.1
 Werkzeug==3.1.3
+gunicorn==20.1.0
